Initial commit - KrishiMitra price prediction app

--- a/frontend_static/index.html
+++ b/frontend_static/index.html
@@ -129,6 +129,15 @@
           <div id="list-state" class="dropdown-list"></div>
           <div class="text-xs text-gray-500 mt-1">Selected: <span id="sel-state">—</span></div>
         </div>
+        
+        <!-- District -->
+<div class="relative">
+  <label class="block text-sm text-gray-600 mb-1">District</label>
+  <input id="search-district" class="input-field" placeholder="Select district..." autocomplete="off" />
+  <div id="list-district" class="dropdown-list"></div>
+  <div class="text-xs text-gray-500 mt-1">Selected: <span id="sel-district">—</span></div>
+</div>
+
 
         <div class="relative">
           <label class="block text-sm text-gray-600 mb-1">Mandi / Market</label>
